Ultima carga de la informacion

--- a/prueba_tecnica.ipynb
+++ b/prueba_tecnica.ipynb
@@ -726,6 +726,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Genero Nuevo Dataframe con la categoria indicada\n",
     "Crimes_Against_Property = victims.loc[victims['Victims'] == 'Crimes Against Property'].copy()\n",
     "Crimes_Against_Property.columns = indice_age[0:len(Crimes_Against_Property.columns)]\n",
     "Crimes_Against_Property.drop(columns=['Total_Victims'], inplace=True)"
@@ -737,6 +738,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Transformo el Dataframe\n",
     "Crimes_Against_Property = Crimes_Against_Property.transpose()"
    ]
   },
@@ -859,6 +861,7 @@
     }
    ],
    "source": [
+    "# ultimo paso para limpiar y reacomodar el Dataframe\n",
     "Crimes_Against_Property.drop(Crimes_Against_Property.index[0], inplace=True)\n",
     "Crimes_Against_Property.columns = ['Crimes Against Property']\n",
     "Crimes_Against_Property = Crimes_Against_Property.rename_axis('Age')\n",
@@ -871,6 +874,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Exporto el archivo .csv\n",
     "Crimes_Against_Property.to_csv('Crimes_Against_Property.csv')"
    ]
   }
